--- a/.classpath
+++ b/.classpath
@@ -12,5 +12,6 @@
 	<classpathentry kind="lib" path="lib/servletapi-2.3.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/hamcrest-core-1.3.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/junit-4.11.jar"/>
+	<classpathentry kind="lib" path="lib/javax.faces-2.0.7.jar"/>
 	<classpathentry kind="output" path="WebContent/WEB-INF/classes"/>
 </classpath>
