--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,57 +1,54 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app>
-	<display-name>JavaFlex</display-name>
-	<context-param>
-		<param-name>javax.faces.PROJECT_STAGE</param-name>
-		<param-value>Development</param-value>
-	</context-param>
-	<context-param>
-		<param-name>primefaces.THEME</param-name>
-		<param-value>pepper-grinder</param-value>
-	</context-param>
-
-	<filter>
-		<filter-name>loginFilter</filter-name>
-		<filter-class>edu.fae.filters.LoginFilter</filter-class>
-	</filter>
-	<filter-mapping>
-		<filter-name>loginFilter</filter-name>
-		<url-pattern>/admin/*</url-pattern>
-	</filter-mapping>
-
-
-	<filter>
-		<filter-name>HibernateFilter</filter-name>
-		<filter-class>edu.fae.util.OpenSessionInViewFilter</filter-class>
-	</filter>
-	<filter>
-		<filter-name>NoCacheFilter</filter-name>
-		<filter-class>edu.fae.util.NoCacheFilter</filter-class>
-	</filter>
-	<filter-mapping>
-		<filter-name>HibernateFilter</filter-name>
-		<url-pattern>/*</url-pattern>
-	</filter-mapping>
-	<filter-mapping>
-		<filter-name>HibernateFilter</filter-name>
-		<url-pattern>/faces/*</url-pattern>
-	</filter-mapping>
-	<filter-mapping>
-		<filter-name>NoCacheFilter</filter-name>
-		<url-pattern>*.xhtml</url-pattern>
-	</filter-mapping>
-	<servlet>
-		<servlet-name>Faces Servlet</servlet-name>
-		<servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
-		<load-on-startup>1</load-on-startup>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>Faces Servlet</servlet-name>
-		<url-pattern>*.jsf</url-pattern>
-	</servlet-mapping>
-	<welcome-file-list>
-		<welcome-file>index.jsf</welcome-file>
-		<welcome-file>index.html</welcome-file>
-		<welcome-file>index.jsp</welcome-file>
-	</welcome-file-list>
+<web-app xmlns:javaee="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
+  <javaee:display-name>JavaFlex</javaee:display-name>
+  <context-param>
+    <javaee:param-name>javax.faces.PROJECT_STAGE</javaee:param-name>
+    <javaee:param-value>Development</javaee:param-value>
+  </context-param>
+  <context-param>
+    <javaee:param-name>primefaces.THEME</javaee:param-name>
+    <javaee:param-value>pepper-grinder</javaee:param-value>
+  </context-param>
+  <filter>
+    <filter-name>loginFilter</filter-name>
+    <filter-class>edu.fae.filters.LoginFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>loginFilter</filter-name>
+    <url-pattern>/admin/*</url-pattern>
+  </filter-mapping>
+  <filter>
+    <filter-name>HibernateFilter</filter-name>
+    <filter-class>edu.fae.util.OpenSessionInViewFilter</filter-class>
+  </filter>
+  <filter>
+    <filter-name>NoCacheFilter</filter-name>
+    <filter-class>edu.fae.util.NoCacheFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>HibernateFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+  <filter-mapping>
+    <filter-name>HibernateFilter</filter-name>
+    <url-pattern>/faces/*</url-pattern>
+  </filter-mapping>
+  <filter-mapping>
+    <filter-name>NoCacheFilter</filter-name>
+    <url-pattern>*.xhtml</url-pattern>
+  </filter-mapping>
+  <servlet>
+    <servlet-name>Faces Servlet</servlet-name>
+    <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Faces Servlet</servlet-name>
+    <url-pattern>*.jsf</url-pattern>
+  </servlet-mapping>
+  <welcome-file-list>
+    <welcome-file>index.jsf</welcome-file>
+    <welcome-file>index.html</welcome-file>
+    <welcome-file>index.jsp</welcome-file>
+  </welcome-file-list>
 </web-app>
